python-extras (0.0.3-1) experimental; urgency=low

  * New upstream release.
  * Updated homepage: so it doesn't include the package version.
  * Added "make check" test suite.

 -- Thomas Goirand <zigo@debian.org>  Thu, 14 Mar 2013 20:01:12 +0800

python-extras (0.0.2-1) experimental; urgency=low

  * Initial release (Closes: #695833).

 -- Thomas Goirand <zigo@debian.org>  Thu, 13 Dec 2012 06:31:35 +0000