@@ -3,6 +3,7 @@ python-extras (0.0.3-1) experimental; urgency=low
   * New upstream release.
   * Updated homepage: so it doesn't include the package version.
   * Added "make check" test suite.
+  * Added a new python3-extras binary package for Python 3 support.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 14 Mar 2013 20:01:12 +0800
 
